--- a/package.json
+++ b/package.json
@@ -12,22 +12,30 @@
     "eslint:fix": "yarn eslint:check --fix",
     "format": "yarn prettier:fix & yarn eslint:fix",
     "start": "ts-node ./src/index.ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha --require ts-node/register test/**/*.ts"
   },
   "dependencies": {
+    "body-parser": "1.20.0",
     "express": "4.18.1",
+    "supertest": "6.2.3",
     "ts-node": "10.8.0"
   },
   "devDependencies": {
+    "@types/chai": "4.3.1",
     "@types/express": "4.17.13",
+    "@types/mocha": "9.1.1",
+    "@types/supertest": "2.0.12",
     "@typescript-eslint/eslint-plugin": "5.27.0",
     "@typescript-eslint/parser": "5.27.0",
+    "assert": "2.0.0",
+    "chai": "4.3.6",
     "eslint": "8.16.0",
     "eslint-config-standard": "17.0.0",
     "eslint-plugin-import": "2.26.0",
     "eslint-plugin-n": "15.2.0",
     "eslint-plugin-node": "11.1.0",
     "eslint-plugin-promise": "6.0.0",
+    "mocha": "10.0.0",
     "prettier": "2.6.2",
     "typescript": "4.7.2"
   }
